# Starter_Pack

./: .cursorrules  .env.example  .gitignore  CONTRIBUTING.md  FINALIZATION_CHECKLIST.md  FIRST_PROMPT.md  Makefile  QUICK_TEST.md  README.md  SECURITY.md  SETUP.md  pyproject.toml
.cursor/: ASSUMPTIONS.md  BASELINE_CHECKS.md  CONTEXT_BRIEF.md  CONVERSATION_POLICY.md  FAILURE_TO_FIX_PROTOCOL.md  PROJECT_CONTEXT.md  PROMPT_MASTER.md  PROMPT_SELF_HEALING.md  RUNBOOK.md  START_HERE.md  STOP_CONDITIONS.md
.github/: PULL_REQUEST_TEMPLATE.md
.ops/conversations/: README.md
.ops/error_kb/: README.md
.ops/scripts/: bootstrap_fresh.sh  check_env.py  convo_append.py  convo_brief.py  convo_new.py  diagnose.py  fingerprint_env.py  record_failure.py  verify_setup.py
docs/: TESTING_GUIDE.md  anti_patterns.md  db-access.md  env-vars.md  error_kb_template.md  industry_research_queries.md  industry_standards.md  server-access.md
docs/decisions/: 0001-tech-stack.md  0002-logging-approach.md  0003-credentials-policy.md  README.md
src/app/: logging_config.py  settings.py
tests/: conftest.py  test_check_env.py  test_logging_redaction.py  test_settings.py  test_smoke.py
